<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="add_task">Add task</string>
    <string name="back">Back</string>
    <string name="set_date">Set date</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="task">Task</string>
</resources>
